Fixing Some Issues related to Ui